--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = code/tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = https://github.com/OpenNeuroDatasets/ds001848.git
+	datalad-id = 63a96ddc-5c80-11e9-af54-0242ac130006
+	datalad-url = https://github.com/OpenNeuroDatasets/ds001848.git
